--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "eslint-plugin-vue": "^6.2.2",
     "sass": "^1.29.0",
     "sass-loader": "^10.1.0",
+    "stylus": "^0.54.8",
+    "stylus-loader": "^3.0.2",
     "vue-template-compiler": "^2.6.11"
   },
   "eslintConfig": {
